TM-12757 Html format

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -1,7 +1,21 @@
 <tds-ui-floating-header-k-grid></tds-ui-floating-header-k-grid>
 
-<kendo-grid class="tds-kendo-grid without-selectabe-rows asset-explorer-view-grid-component" #kendoGridComponent="kendoGrid" [filterable]="true" [sortable]="{ mode:'single' }" [data]="gridData" [skip]="state.skip" [sort]="state.sort"
- [pageSize]="state.take" [resizable]="true" [pageable]="{ pageSizes: maxOptions, info: true}" (dataStateChange)="dataStateChange($event)" (columnResize)="onWidthChange($event)" (cellClick)="cellClick($event)" [rowClass]="rowCallbackClass">
+<kendo-grid
+		class="tds-kendo-grid without-selectabe-rows asset-explorer-view-grid-component"
+		#kendoGridComponent="kendoGrid"
+		[filterable]="true"
+		[sortable]="{ mode:'single' }"
+		[data]="gridData"
+		[skip]="state.skip"
+		[sort]="state.sort"
+ 		[pageSize]="state.take"
+		[resizable]="true"
+		[pageable]="{ pageSizes: maxOptions, info: true}"
+		(dataStateChange)="dataStateChange($event)"
+		(columnResize)="onWidthChange($event)"
+		(cellClick)="cellClick($event)"
+		[rowClass]="rowCallbackClass"
+>
 
     <!-- Header Toolbar -->
     <ng-template kendoGridToolbarTemplate [position]="'top'" class="header-section">
@@ -129,8 +143,14 @@
 	</kendo-grid-command-column>
 
     <!-- Configured View Columns (*ngFor) -->
-	<kendo-grid-column *ngFor="let column of model.columns; let i = index" [locked]="column.locked" field="{{column.domain}}_{{column.property}}"
-	 [minResizableWidth]="VIEW_COLUMN_MIN_WIDTH" [width]="column.width" [class]="column.domain">
+	<kendo-grid-column
+			*ngFor="let column of model.columns; let i = index"
+			[locked]="column.locked"
+			field="{{column.domain}}_{{column.property}}"
+	 		[minResizableWidth]="VIEW_COLUMN_MIN_WIDTH"
+			[width]="column.width"
+			[class]="column.domain"
+	>
 		<ng-template kendoGridHeaderTemplate>
 			<div class="sortable-column component-action-sort" (click)="onClickTemplate($event)">
 				<div [ngClass]="{'field-not-found': column?.notFound }">
