--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -4,8 +4,8 @@
         <div class="modal-content resizable tds-angular-component-content"
              tds-ui-modal-decorator=""
              [options]="modalOptions"
-             [style.width.px]="860"
-             [style.height.px]="706">
+             [style.width.px]="1118"
+             [style.height.px]="917">
             <div class="modal-header">
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
@@ -375,7 +375,7 @@
                                                             <tds-combobox
                                                                     class="status"
                                                                     [(model)]="dataItem.model"
-                                                                    [defaultText]="'Please Select'"
+                                                                    [placeholder]="'Please Select'"
                                                                     [innerTemplateFormat]="innerTemplateTaskItem"
                                                                     [updateOnChanges]="true"
                                                                     [(metaParam)]="metaParam"
@@ -418,8 +418,8 @@
                                                         <tds-combobox
                                                                 class="status"
                                                                 [(model)]="dataItem.model"
-                                                                [defaultText]="'Please Select'"
                                                                 [updateOnChanges]="true"
+                                                                [placeholder]="'Please Select'"
                                                                 [innerTemplateFormat]="innerTemplateTaskItem"
                                                                 [(metaParam)]="metaParam"
                                                                 (filterChange)="onFilterChange($event,'successor', rowIndex)"
