TM-12757 Putting back the floating header

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -1,3 +1,4 @@
+<tds-ui-floating-header-k-grid></tds-ui-floating-header-k-grid>
 
 <kendo-grid
 		class="tds-kendo-grid without-selectabe-rows asset-explorer-view-grid-component"
