TM-12807 Fix issue clearing filter of task lists

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -116,7 +116,8 @@
           margin-left: 4px
         .duplicate-error,
         .dependency-error-section label.has-double-assignment
-          font-weight: normal
+          font-size: 14px
+          font-weight: bold
           color: $color-message-error--red
         label.has-double-assignment
           width: 100%
