TM-12270 - Functionally complete and styled.

--- a/web-app/tds/web-app/app-js/modules/user/components/list/user-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/list/user-list.component.html
@@ -1,1 +1,1 @@
-<span (click)="openPreferences()" class="preference-opener" style="width:50px;height:50px;background-color:blue">whoa</span>
+<span>Under Development</span>
