--- a/web-app/tds/web-app/app-js/modules/user/components/preferences/user-preferences.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/preferences/user-preferences.component.html
@@ -25,6 +25,10 @@
 
         <div class="buttons">
             <span class="button"><input id="prefButton" type="button" class="delete" (click)="resetPreferences()" value="Reset All"/> </span>
+            <button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
+                <span class="glyphicon glyphicon-ban-circle"></span>
+                <span>Close</span>
+            </button>
         </div>
     </div>
 </div>
