--- a/web-app/tds/web-app/css/page/module/user/user-preferences.component.sass
+++ b/web-app/tds/web-app/css/page/module/user/user-preferences.component.sass
@@ -3,6 +3,15 @@
     padding: 6px 18px 1px 18px !important
   .buttons
     padding: 15px
+    text-align: center
+    .delete
+      background: transparent url(../../../icons/database_delete.png) 5px 50% no-repeat
+      width: 92px
+      text-align: right
+      border: none
+      font-weight: 700
+      font-size: 14px
+      font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif
   th
     background-color: rgb(204, 204, 204)
     font-weight: bold
@@ -17,7 +26,7 @@
     font-size: 12px
     color: #000
   td
-    padding: 4px 5px
+    padding: 0px 5px
   .clear_filter
     font-size: 18px
     color: #B80000
