--- a/web-app/tds/web-app/css/page/module/user/user-preferences.component.sass
+++ b/web-app/tds/web-app/css/page/module/user/user-preferences.component.sass
@@ -1,6 +1,8 @@
 .user-preferences-component
   .modal-body
     padding: 6px 18px 1px 18px !important
+  .modal-title
+    cursor: move
   .buttons
     padding: 15px
     text-align: center
