TM-12270 - Code wrap-up

--- a/web-app/tds/web-app/css/page/module/user/user-preferences.component.sass
+++ b/web-app/tds/web-app/css/page/module/user/user-preferences.component.sass
@@ -1,7 +1,7 @@
 .user-preferences-component
   .modal-body
     padding: 6px 18px 1px 18px !important
-  .modal-title
+  .modal-header
     cursor: move
   .buttons
     padding: 15px
