--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -4,8 +4,8 @@
         <div class="modal-content resizable tds-angular-component-content task-create-component"
              tds-ui-modal-decorator=""
              [options]="modalOptions"
-             [style.width.px]="1118"
-             [style.height.px]="917">
+             [style.width.px]="SHARED_TASK_SETTINGS.DEFAULT_TASK_HEIGHT"
+             [style.height.px]="SHARED_TASK_SETTINGS.DEFAULT_TASK_WIDTH">
             <div class="modal-header">
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
