TM-12855 Fix, actually caused by TM-11837.

--- a/web-app/tds/web-app/app-js/modules/importBatch/components/list/import-batch-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/list/import-batch-list.component.html
@@ -173,7 +173,7 @@
                                 </ng-template>
                                 <ng-template #statusTemplate>
                                     <div [ngClass]="{ 'status-with-errors' : dataItem.recordsSummary.erred > 0 }" class="status-text">
-                                        {{ dataItem.status.label }}
+                                        {{ dataItem.status.label | titlecase }}
                                     </div>
                                 </ng-template>
                             </ng-template>
