--- a/web-app/tds/web-app/css/elements/general/grid.sass
+++ b/web-app/tds/web-app/css/elements/general/grid.sass
@@ -36,7 +36,8 @@
   .sortable-column, .sortable-column label
     float: left
     cursor: pointer
-
+    &.with-filter
+      width: 100%
   .selectall-checkbox-column
     cursor: pointer
     width: 100%
