TM-12757 Decouple AssetExplorerViewGridComponent from its host component

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
@@ -164,8 +164,12 @@
 			</div>
 		</div>
 		<asset-explorer-view-grid #grid="assetExplorerViewGrid"
+		                          [data]="data"
                                   (modelChange)="onPreview()"
-								  [fields]="allFields"
+                                  (justPlanningChange)="onJustPlanningChange($event)"
+                                  [gridState]="gridState"
+                                  (gridStateChange)="onGridStateChange($event)"
+		                          [fields]="allFields"
                                   [edit]="true"
                                   [model]="model.schema"
 		                          [viewId]="model.id"
