--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
@@ -163,8 +163,7 @@
 				</div>
 			</div>
 		</div>
-		<asset-explorer-view-grid #grid="assetExplorerViewGrid"
-		                          [data]="data"
+		<asset-explorer-view-grid [data]="data"
                                   (modelChange)="onPreview()"
                                   (justPlanningChange)="onJustPlanningChange($event)"
                                   [gridState]="gridState"
