--- a/web-app/tds/web-app/app-js/shared/modules/header/header.component.html
+++ b/web-app/tds/web-app/app-js/shared/modules/header/header.component.html
@@ -2,6 +2,7 @@
 <section class="content-header">
     <ng-container *ngIf="pageMetaData">
         <span (click)="openPrefModal()" class="open-pref-modal"></span>
+        <span (click)="openDateTimezoneModal()" class="open-date-timezone-modal"></span>
         <h1>
             {{pageMetaData.title | translate}}
             <small>{{pageMetaData.instruction | translate}}</small>
