TM-12811 removing the text-capitalize style from category.

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/single-comment/single-comment.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/single-comment/single-comment.component.html
@@ -30,7 +30,7 @@
 											</kendo-dropdownlist>
 										</div>
 										<div class="col-sm-8" *ngIf="singleCommentModel.modal.type === modalType.VIEW">
-											<label class="control-label label-detail text-capitalize">{{singleCommentModel.category}}</label>
+											<label class="control-label label-detail">{{singleCommentModel.category}}</label>
 										</div>
 									</div>
 								</div>
