Work In Progress: - Added date, datetime types to field settings - More refactor

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -99,12 +99,12 @@
                                                     [(value)]="editRows.selectedValues[rowIndex].value"></tds-number-control>
 
                                     <!-- Datetime Fields -->
-                                    {{editRows.selectedValues[rowIndex].value}}
+                                    {{editRows.selectedValues[rowIndex].value}}<br>
                                     <tds-date-control *ngIf="canShowControl('Date', rowIndex)"
                                                        [(value)]="editRows.selectedValues[rowIndex].value"></tds-date-control>
                                     <!-- Datetime Fields -->
-                                    <tds-date-time-control *ngIf="canShowControl('DateTime', rowIndex)"
-                                                       [(value)]="editRows.selectedValues[rowIndex].value"></tds-date-time-control>
+                                    <tds-datetime-control *ngIf="canShowControl('DateTime', rowIndex)"
+                                                       [(value)]="editRows.selectedValues[rowIndex].value"></tds-datetime-control>
 
                                     <!-- Yes/No List Fields -->
                                     <kendo-dropdownlist
