Work In Progress: - Added date, datetime types to field settings - More refactor

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -99,10 +99,13 @@
                                                     [(value)]="editRows.selectedValues[rowIndex].value"></tds-number-control>
 
                                     <!-- Datetime Fields -->
-                                    {{editRows.selectedValues[rowIndex].value}}<br>
-                                    <tds-date-control *ngIf="canShowControl('Date', rowIndex)"
-                                                       [(value)]="editRows.selectedValues[rowIndex].value"></tds-date-control>
+                                    <b>Output:</b> {{editRows.selectedValues[rowIndex].value}}<br>
+
+                                    <!--<b>Pipe:</b> {{editRows.selectedValues[rowIndex].value | tdsDate: userDateFormat}}<br>-->
+                                    <!--<tds-date-control *ngIf="canShowControl('DateTime', rowIndex)"-->
+                                                       <!--[(value)]="editRows.selectedValues[rowIndex].value"></tds-date-control>-->
                                     <!-- Datetime Fields -->
+                                    <b>Pipe:</b> {{editRows.selectedValues[rowIndex].value | userDateTime: userTimeZone}}<br>
                                     <tds-datetime-control *ngIf="canShowControl('DateTime', rowIndex)"
                                                        [(value)]="editRows.selectedValues[rowIndex].value"></tds-datetime-control>
 
