TM-12569 Add tab index to footer command buttons

--- a/web-app/tds/web-app/app-js/shared/components/supports-depends/supports-depends.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/supports-depends/supports-depends.component.html
@@ -10,7 +10,7 @@
     <!-- Toolbar Template -->
     <ng-template kendoGridToolbarTemplate [position]="'top'">
         <label class="pad-top-2 pad-left-10 mar-bottom-3">Supports</label>
-        <button (click)="onAdd(dependencyType.SUPPORT, dataGridSupportsOnHelper)" class="btn btn-add-new-dependency btn-default float-right mar-right-15 pad-top-2" type="button">
+        <button (click)="onAdd(dependencyType.SUPPORT, dataGridSupportsOnHelper)" tabindex="401" class="btn btn-add-new-dependency btn-default float-right mar-right-15 pad-top-2" type="button">
             <i class="fa fa-med fa-fw fa-plus-circle"></i> <span>Add</span>
         </button>
     </ng-template>
@@ -123,7 +123,7 @@
     <!-- Toolbar Template -->
     <ng-template kendoGridToolbarTemplate [position]="'top'">
         <label class="pad-top-2 pad-left-10 mar-bottom-3">Is Dependent On </label>
-        <button (click)="onAdd(dependencyType.DEPENDENT, dataGridDependsOnHelper)" class="btn btn-add-new-dependency btn-default float-right mar-right-15 pad-top-2" type="button">
+        <button tabindex="404" (click)="onAdd(dependencyType.DEPENDENT, dataGridDependsOnHelper)"  class="btn btn-add-new-dependency btn-default float-right mar-right-15 pad-top-2" type="button">
             <i class="fa fa-med fa-fw fa-plus-circle"></i> <span>Add</span>
         </button>
     </ng-template>
