TM-12869 FIX Unable to create an asset view if all columns are locked

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-config/asset-explorer-view-config.component.html
@@ -157,6 +157,7 @@
 										</div>
 									</ng-template>
 								</kendo-sortable>
+								<label class="invalid-columns-selection" *ngIf="!hasAtLeastOneNonLockedColumnOrEmpty()">Must have at least one not locked column</label>
 							</div>
 						</div>
 					</div>
