--- a/web-app/tds/web-app/css/page/module/assetExplorer/report-config.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/report-config.sass
@@ -1,4 +1,7 @@
 section.page-asset-explorer-config
+  .invalid-columns-selection
+    color: $color-message-error--red
+    font-weight: normal
   div.asset-view-title
     h3
       margin-top: 8px
