Work In Progress - datetime pipe added on assets show view - refactor: rename asset userDateTime pipe

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -105,7 +105,7 @@
                                     <!--<tds-date-control *ngIf="canShowControl('DateTime', rowIndex)"-->
                                                        <!--[(value)]="editRows.selectedValues[rowIndex].value"></tds-date-control>-->
                                     <!-- Datetime Fields -->
-                                    <b>Pipe:</b> {{editRows.selectedValues[rowIndex].value | userDateTime: userTimeZone}}<br>
+                                    <b>Pipe:</b> {{editRows.selectedValues[rowIndex].value | tdsDateTime: userTimeZone}}<br>
                                     <tds-datetime-control *ngIf="canShowControl('DateTime', rowIndex)"
                                                        [(value)]="editRows.selectedValues[rowIndex].value"></tds-datetime-control>
 
