--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -192,7 +192,7 @@
 			<!-- Last Updated Cell Template -->
 			<ng-template kendoGridCellTemplate let-dataItem *ngIf="column.property === 'lastUpdated'">
 				<div>
-					{{dataItem[column.domain+'_'+column.property]| userDateTime : userTimeZone }}
+					{{dataItem[column.domain+'_'+column.property]| tdsDateTime : userTimeZone }}
 				</div>
 			</ng-template>
 		</kendo-grid-column>
