TM-12891 Enabled Esc button and fixing some typos on the task detail component

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -1,12 +1,12 @@
 @import "../../base/taskstatus-mixins"
 
 @mixin combo-status
-  margin: 0;
-  padding: 0;
-  border: 0;
+  margin: 0
+  padding: 0
+  border: 0
   display: inline-flex
   outline-style: none
-  max-height: 27px!important;
+  max-height: 27px !important
   span.k-dropdown-wrap
     background: inherit
     color: inherit
@@ -123,9 +123,9 @@
           width: 100%
           text-align: center
         .duplicate-error
-          text-align: center;
-          width: 100%;
-          margin-top: 10px;
+          text-align: center
+          width: 100%
+          margin-top: 10px
         tds-combobox.status > kendo-combobox
           color: inherit
           font-weight: normal
@@ -141,10 +141,10 @@
         td.label.edge-cell
           height: 35px
         td.label.status-cell
-          height: 35px;
-          max-height: 35px;
-          display: inline-table;
-          width: 100%;
+          height: 35px
+          max-height: 35px
+          display: inline-table
+          width: 100%
         td.valueNW.note
           vertical-align: top
         td.valueNW
@@ -207,7 +207,7 @@
               width: 85%
               text-align: center
           .lock-state
-            cursor: pointer;
+            cursor: pointer
 
       .task-layout
         display: flex
